P35- fix overflow in slider

--- a/Day35. Image Carousel/style.css
+++ b/Day35. Image Carousel/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 .slider{
+  overflow: hidden;
   display: flex; 
   transition: transform .3s ease-in-out;
 }
